fix:feedback page on smaller screens

--- a/src/pages/feedbackPage/feedback.css
+++ b/src/pages/feedbackPage/feedback.css
@@ -1,6 +1,6 @@
 .feedback {
   padding-top: 3.125rem;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 1.875rem;
@@ -15,14 +15,14 @@
   padding-bottom: 1.875rem;
   color: #2c2c2c;
   font-weight: 600;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 0.9375rem;
 }
 
 .feedback-body h6 {
   color: #2c2c2c;
   font-weight: 400;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 0.625rem;
 }
 
@@ -37,4 +37,16 @@
   width: 25rem;
   background-color: #fff;
   box-shadow: 0 0.125rem 0.5rem rgba(0, 0, 0, 0.06);
+}
+
+@media screen and (max-width: 768px) {
+  .feedback-body {
+    max-width: 300px;
+  }
+}
+@media screen and (max-width: 320px) {
+  .feedback-body {
+    max-width: 270px;
+    padding: 20px 0;
+  }
 }
